Sequencer : Cross Fade between adjustement layer strips not working since 2.9 #85824

Closed
opened 2021-02-20 18:53:28 +01:00 by Yohan Le Diraison · 4 comments

System Information
Operating system: Linux
Graphics card: NVIDIA GTX 560 Ti

Blender Version
Broken: from 2.90.0 to 2.91.2
Worked: 2.83.12

Short description of error
In the sequencer, a simple cross fade (cross or gamma cross) beteween two adjustement layer strip doesn't work since Blender 2.90.0.

Exact steps for others to reproduce the error
in the sequencer, add two images separated by some empty frames, add ajustement layer on top of them and cross fade the two AL strips. The attached file work with 2.83.* (replace both images by the first you find - obviously, in true workflow, I use this functionality with more complex stacked strips...).

2020-02-20 - Bug Sequencer.blend

**System Information** Operating system: Linux Graphics card: NVIDIA GTX 560 Ti **Blender Version** Broken: from 2.90.0 to 2.91.2 Worked: 2.83.12 **Short description of error** In the sequencer, a simple cross fade (cross or gamma cross) beteween two adjustement layer strip doesn't work since Blender 2.90.0. **Exact steps for others to reproduce the error** in the sequencer, add two images separated by some empty frames, add ajustement layer on top of them and cross fade the two AL strips. The attached file work with 2.83.* (replace both images by the first you find - obviously, in true workflow, I use this functionality with more complex stacked strips...). [2020-02-20 - Bug Sequencer.blend](https://archive.blender.org/developer/F9822265/2020-02-20_-_Bug_Sequencer.blend)

Added subscriber: @YohanLeDiraison

Added subscriber: @YohanLeDiraison
Yohan Le Diraison changed title from Sequencer : Cross Fade between Adjustement layer not working since 2.9 to Sequencer : Cross Fade between adjustement layer strip not working since 2.9 2021-02-20 18:54:04 +01:00
Yohan Le Diraison changed title from Sequencer : Cross Fade between adjustement layer strip not working since 2.9 to Sequencer : Cross Fade between adjustement layer strips not working since 2.9 2021-02-20 18:56:06 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by c81dfa2426

This issue was referenced by c81dfa2426084ab9e580047f568e4066cac34f2d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-03-20 01:43:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85824
No description provided.